movies-k8s/6-deploy-movies-bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-bff
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movies-bff
  template:
    metadata:
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: movies-bff
        version: v1
    spec:
      containers:
      - name: movies-bff
        image: eder/moviesbff:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: "/actuator/health/liveness"
            port: 8080
            scheme: HTTP
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: "/actuator/health/readiness"
            port: 8080
            scheme: HTTP
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: movies-bff
spec:
  type: ClusterIP
  selector:
    app: movies-bff
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
