movies-k8s/1-jaeger.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: jaeger
    app.kubernetes.io/component: query-ingress
    app.kubernetes.io/instance: jgr
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jgr-query
    app.kubernetes.io/part-of: jaeger
  name: jgr-query
spec:
  ingressClassName: nginx
  rules:
    - host: jaeger
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jgr-query
                port:
                  number: 16686
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "false"
    service.beta.openshift.io/serving-cert-secret-name: jgr-collector-headless-tls
  labels:
    app: jaeger
    app.kubernetes.io/component: service-collector
    app.kubernetes.io/instance: jgr
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jgr-collector
    app.kubernetes.io/part-of: jaeger
  name: jgr-collector-headless
spec:
  clusterIP: None
  ports:
    - name: http-zipkin
      port: 9411
      targetPort: 0
    - name: grpc-http
      port: 14250
      targetPort: 0
    - name: c-tchan-trft
      port: 14267
      targetPort: 0
    - name: http-c-binary-trft
      port: 14268
      targetPort: 0
  selector:
    app: jaeger
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/instance: jgr
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jgr
    app.kubernetes.io/part-of: jaeger
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jaeger
    app.kubernetes.io/component: service-collector
    app.kubernetes.io/instance: jgr
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jgr-collector
    app.kubernetes.io/part-of: jaeger
  name: jgr-collector
spec:
  ports:
    - name: http-zipkin
      port: 9411
      targetPort: 0
    - name: grpc-http
      port: 14250
      targetPort: 0
    - name: c-tchan-trft
      port: 14267
      targetPort: 0
    - name: http-c-binary-trft
      port: 14268
      targetPort: 0
  selector:
    app: jaeger
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/instance: jgr
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jgr
    app.kubernetes.io/part-of: jaeger
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jaeger
    app.kubernetes.io/component: service-query
    app.kubernetes.io/instance: jgr
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jgr-query
    app.kubernetes.io/part-of: jaeger
  name: jgr-query
spec:
  ports:
    - name: http-query
      port: 16686
      targetPort: 16686
    - name: grpc-query
      port: 16685
      targetPort: 16685
  selector:
    app: jaeger
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/instance: jgr
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jgr
    app.kubernetes.io/part-of: jaeger
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:

  labels:
    app: jaeger
    app.kubernetes.io/component: service-agent
    app.kubernetes.io/instance: jgr
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jgr-agent
    app.kubernetes.io/part-of: jaeger
  name: jgr-agent
spec:
  clusterIP: None
  ports:
    - name: zk-compact-trft
      port: 5775
      protocol: UDP
      targetPort: 0
    - name: config-rest
      port: 5778
      targetPort: 0
    - name: jg-compact-trft
      port: 6831
      protocol: UDP
      targetPort: 0
    - name: jg-binary-trft
      port: 6832
      protocol: UDP
      targetPort: 0
  selector:
    app: jaeger
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/instance: jgr
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jgr
    app.kubernetes.io/part-of: jaeger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    linkerd.io/inject: disabled
    prometheus.io/port: "14269"
    prometheus.io/scrape: "true"
    sidecar.istio.io/inject: "false"
  labels:
    app: jaeger
    app.kubernetes.io/component: all-in-one
    app.kubernetes.io/instance: jgr
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: jgr
    app.kubernetes.io/part-of: jaeger
  name: jgr
spec:
  selector:
    matchLabels:
      app: jaeger
      app.kubernetes.io/component: all-in-one
      app.kubernetes.io/instance: jgr
      app.kubernetes.io/managed-by: jaeger-operator
      app.kubernetes.io/name: jgr
      app.kubernetes.io/part-of: jaeger
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        linkerd.io/inject: disabled
        prometheus.io/port: "14269"
        prometheus.io/scrape: "true"
        sidecar.istio.io/inject: "false"

      labels:
        app: jaeger
        app.kubernetes.io/component: all-in-one
        app.kubernetes.io/instance: jgr
        app.kubernetes.io/managed-by: jaeger-operator
        app.kubernetes.io/name: jgr
        app.kubernetes.io/part-of: jaeger
    spec:
      containers:
        - args:
            - --sampling.strategies-file=/etc/jaeger/sampling/sampling.json
          image: jaegertracing/all-in-one:1.30.0
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /
              port: 14269
            initialDelaySeconds: 5
            periodSeconds: 15
          name: jaeger
          ports:
            - containerPort: 5775
              name: zk-compact-trft
              protocol: UDP
            - containerPort: 5778
              name: config-rest
            - containerPort: 6831
              name: jg-compact-trft
              protocol: UDP
            - containerPort: 6832
              name: jg-binary-trft
              protocol: UDP
            - containerPort: 9411
              name: zipkin
            - containerPort: 14267
              name: c-tchan-trft
            - containerPort: 14268
              name: c-binary-trft
            - containerPort: 16686
              name: query
            - containerPort: 14269
              name: admin-http
            - containerPort: 14250
              name: grpc
          readinessProbe:
            httpGet:
              path: /
              port: 14269
            initialDelaySeconds: 1
          resources: { }
          volumeMounts:
            - mountPath: /etc/jaeger/sampling
              name: jgr-sampling-configuration-volume
              readOnly: true
      enableServiceLinks: false
      serviceAccountName: jgr
      volumes:
        - configMap:
            items:
              - key: sampling
                path: sampling.json
            name: jgr-sampling-configuration
          name: jgr-sampling-configuration-volume
